--- a/frontend/src/pages/GLS/GLS.css
+++ b/frontend/src/pages/GLS/GLS.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap');
 
-* {
+/* * {
     scrollbar-width: thin;
     scrollbar-color: #333 transparent;
 }
 
-::-webkit-scrollbar {
+*/
+/* ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
 }
@@ -22,6 +23,8 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
+*/
 
 .gls-container {
     width: 100vw;
